syntax = "proto3";

message PlayerProto {
    string nickname = 1;
    int32 position_x = 2;
    int32 position_y = 3;
    int32 score = 4;
    string step_direction = 5;
    int32 version = 6;
    message AdditionalData {
        string text = 1;
        int32 number1 = 2;
        int32 number2 = 3;
        int32 number3 = 4;
    }
    repeated AdditionalData additionalData = 7;
}
